Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.6.6 (??/??/20??):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)

	General:
	* Correctly disable all missing dependencies when using the
	  --disable-missing-dependencies option.  (Gabriel Schulhof)

	Gadu-Gadu:
	* Fix display of avatars after a server-side change. (Krzysztof
	  Klinikowski)

	MSN:
	* File transfer requests will no longer cause a crash if you delete the
	  file before the other side accepts.
	* Received files will no longer hold an extra lock after completion,
	  meaning they can be moved or deleted without complaints from your OS.
	* Buddies who sign in from a second location will no longer cause an
	  unnecessary chat window to open.
	* Support setting an animated GIF as a buddy icon.

	XMPP:
	* Added support for the SCRAM-SHA-1 SASL mechanism.  This is only
	  available when built without Cyrus SASL support.
	* When getting info on a domain-only (server) JID, show uptime
	  (when given by the result of the "last query") and don't show status as
	  offline.

	Pidgin:
	* Correctly size conversation and status box entries when the
	  interior-focus style property is diabled. (Gabriel Schulhof)
	* Correctly handle a multiline text field being required in a
	  request form.  (Thanks to Florian Zeitz for finding this problem)

version 2.6.5 (01/08/2010):
	libpurple:
	* TLS certificates are actually stored to the local cache once again
	  (accepting a name mismatch on a certificate should now be remembered)

	General:
	* Build-time fixes for Solaris.  (Paul Townsend)

	AIM and ICQ:
	* Messages from some mobile clients are no longer displayed as
	  Chinese characters (broken in 2.6.4)

	MSN:
	* Fix an issue allowing a remote user to download arbitrary files from
	  a libpurple client.  (CVE-2010-0013)

	XMPP:
	* Do not crash when attempting to register for a new account on Windows.
	* Fix file transfer with clients that do not support Entity Capabilities